--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,15 +7,22 @@
     </h1>
     <div class="flex justify-end flex-wrap gap-2">
       <button
+        *ngIf="!useRemoteConfig && localConfig"
+        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-secondary text-primary hover:bg-secondary-600"
+        (click)="onExportLocalConfig()"
+      >
+        Export
+      </button>
+      <button
         *ngIf="useRemoteConfig"
-        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-primary text-white hover:bg-primary-600"
+        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-secondary text-primary hover:bg-secondary-600"
         (click)="onChangeUseRemoteConfig(false)"
       >
         Switch to Local Config
       </button>
       <button
         *ngIf="!useRemoteConfig"
-        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-primary text-white hover:bg-primary-600"
+        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-secondary text-primary hover:bg-secondary-600"
         (click)="onChangeUseRemoteConfig(true)"
       >
         Switch to Remote Config
