--- a/src/app/config-editor/config-editor.component.html
+++ b/src/app/config-editor/config-editor.component.html
@@ -18,7 +18,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let page of dataSource; let i = index">
-          <td class="min-w-100">
+          <td class="min-w-100 align-top">
             <input
               type="text"
               [formControl]="getFormControl(page, 'url')"
@@ -38,55 +38,57 @@
               URL is required.
             </div>
           </td>
-          <td class="w-20 max-w-20">
+          <td class="w-20 max-w-20 align-top">
             <input
               type="number"
-              [formControl]="getFormControl(page, 'delay')"
+              [formControl]="getFormControl(page, 'delaySeconds')"
               required
               class="w-full text-md bg-ghost block rounded-md border-transparent focus:border-secondary focus:bg-white focus:ring-0"
             />
             <div
               *ngIf="
-                getFormControl(page, 'delay').invalid &&
-                getFormControl(page, 'delay').touched
+                getFormControl(page, 'delaySeconds').invalid &&
+                getFormControl(page, 'delaySeconds').touched
               "
               class="text-red-500 text-sm"
             >
-              <div *ngIf="getFormControl(page, 'delay').errors?.['required']">
+              <div
+                *ngIf="getFormControl(page, 'delaySeconds').errors?.['required']"
+              >
                 Required.
               </div>
-              <div *ngIf="getFormControl(page, 'delay').errors?.['min']">
+              <div *ngIf="getFormControl(page, 'delaySeconds').errors?.['min']">
                 Must be ≥3.
               </div>
             </div>
           </td>
-          <td class="w-20 max-w-20">
+          <td class="w-20 max-w-20 align-top">
             <input
               type="number"
-              [formControl]="getFormControl(page, 'reloadInterval')"
+              [formControl]="getFormControl(page, 'reloadIntervalSeconds')"
               required
               class="w-full text-md bg-ghost block rounded-md border-transparent focus:border-secondary focus:bg-white focus:ring-0"
             />
             <div
               *ngIf="
-                getFormControl(page, 'reloadInterval').invalid &&
-                getFormControl(page, 'reloadInterval').touched
+                getFormControl(page, 'reloadIntervalSeconds').invalid &&
+                getFormControl(page, 'reloadIntervalSeconds').touched
               "
               class="text-red-500 text-sm"
             >
               <div
-                *ngIf="getFormControl(page, 'reloadInterval').errors?.['required']"
+                *ngIf="getFormControl(page, 'reloadIntervalSeconds').errors?.['required']"
               >
                 Required.
               </div>
               <div
-                *ngIf="getFormControl(page, 'reloadInterval').errors?.['min']"
+                *ngIf="getFormControl(page, 'reloadIntervalSeconds').errors?.['min']"
               >
                 Must be ≥0.
               </div>
             </div>
           </td>
-          <td class="w-10 max-w-10 flex flex-row pt-1.5">
+          <td class="w-10 max-w-10 flex flex-row pt-1.5 align-top">
             <button
               type="button"
               class="p-1 rounded-full bg-white text-warn hover:bg-warn-900"
@@ -101,13 +103,14 @@
 
     <div class="flex justify-end flex-wrap gap-2">
       <button
-        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-ghost text-primary hover:bg-secondary-600"
+        class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-secondary text-primary hover:bg-secondary-600"
         type="button"
         (click)="addPage()"
       >
         Add URL
       </button>
       <button
+        *ngIf="formChanged"
         class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-primary text-white hover:bg-primary-600"
         type="submit"
       >
