Added pack to zip and readme

--- a/src/app/config-editor/config-editor.component.html
+++ b/src/app/config-editor/config-editor.component.html
@@ -8,7 +8,7 @@
     class="flex flex-col w-full gap-2 pt-2"
   >
     <div class="flex items-center gap-2">
-      <label for="isFullscreen" class="text-md">Fullscreen Mode</label>
+      <label for="isFullscreen" class="text-md">Start in Fullscreen Mode</label>
       <input
         type="checkbox"
         id="isFullscreen"
