--- a/src/app/config-loader/config-loader.component.html
+++ b/src/app/config-loader/config-loader.component.html
@@ -78,7 +78,7 @@
   </h2>
 
   <div class="flex items-center gap-2" *ngIf="configData">
-    <label class="text-md">Fullscreen Mode:</label>
+    <label class="text-md">Start in Fullscreen Mode:</label>
     <span>{{ configData.isFullscreen ? "Enabled" : "Disabled" }}</span>
   </div>
 
