--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,7 @@
         *ngIf="!isRotating"
         class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-primary text-white hover:bg-primary-600"
         (click)="startRotation()"
+        [disabled]="isRotationDisabled"
       >
         Start
       </button>
@@ -45,6 +46,7 @@
         *ngIf="isRotating"
         class="px-4 py-2 rounded shadow-md transition duration-300 ease-in-out bg-warn text-white hover:bg-warn-600"
         (click)="stopRotation()"
+        [disabled]="isRotationDisabled"
       >
         Stop
       </button>
