Added screenshots and refined manifest for publishing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1
       class="text-primary text-xl font-bold tracking-tight leading-7 truncate"
     >
-      Tabs Rotator
+      Tabs Rotator / Slideshow
     </h1>
     <div class="flex justify-end flex-wrap gap-2">
       <button
